--- a/parts/timelapse.tex
+++ b/parts/timelapse.tex
@@ -81,9 +81,15 @@ Time-lapse photography is the process by which a camera is set up to watch a par
 The technique has been used to capture crowds of people, traffic, and other everyday entities which at a normal speed seem unimpressionable, but at high speeds become a fast flurry of activity.
 
 There were three approaches I could take to make a TimeLapse application:\\
-\tab1. Run the app continuously for the full duration of the time lapse period specified.\\
-\tab2. Run the app continuously in the background for the full duration of the time lapse period.\\
-\tab3. Schedule the app to run and exit at specified times until the full duration of the time lapse period\\
+\begin{enumerate}
+\vspace{-20pt}
+\item Run the app continuously for the full duration of the time lapse period specified.\\
+\vspace{-20pt}
+\item Run the app continuously in the background for the full duration of the time lapse period.\\
+\vspace{-20pt}
+\item Schedule the app to run and exit at specified times until the full duration of the time lapse period\\
+\vspace{-10pt}
+\end{enumerate}
 
 The first approach would have meant that the application would have been in the main foreground while all the frames were being taken. If I wanted to capture a frame every hour for two days, then the app would have to be open and active for that entire time. This would be a waste of RAM, since the application will occupy a chunk of memory for two days without actually doing any work for most of that time. This will also occupy window space since the application UI will be active in this time, which is a major problem because the user may unwittingly close the application preventing it from completing it's job.
 
@@ -110,6 +116,7 @@ For this reason, flags such as '--help' or '--version' were the first two flags 
 
 The other flags followed a different logic:
 \begin{frame}[fragile]
+\vspace{-10pt}
 \lstinputlisting[title=\textbf{Source Code: checkflag.cpp }]{../Code/commandline/checkflag.cpp}
 \end{frame}
  First a default value would be set (in this case 5) for the flag\_value, then a search would commence within the if statement.  The '.indexOf(key)' method would find the index of the flag in the array, or else return -1 if not found. I followed the convention where I would first check for the shorthand name first, and then the longer one since I reasoned that it was less effort to type a shortflag than a longer one, and was thus more likely to occur. This is useful, since C++ supports short-circuit evaluation and so if the first condition is deemed true, it will not need to search the other end of the OR statement.
@@ -271,12 +278,78 @@ every half hour until 10th October 2012 3pm.
 All this, purely by using the same argument values.
 
 \section{Software Battles}
-In order to get repeated application calls in the first place, we need to first schedule the jobs.
+In order to get repeated application calls in the first place, we need to first schedule the jobs. Fremantle uses cron (as do most systems), but it also has it's own native scheduler daemon 'Alarmd'.
 
-\subsection{Cron Vs Alarmd}
+\subsection{Cron vs Alarmd}
+\subsubsection{Cron}
+
+Cron is native to all Linux-based OS's and to set a job, one has to edit /etc/cron.daily/(add item here).  A job is added as a cron string with a command appended and it is the duty of the user to remove the string when that job is to terminate. To do this, the app must read all jobs from the file and filter out which ones belong to the application and which ones dont, then check to see if any of them require retiring, and if so removing them. This is doable, but very pinneckety.
+
+Unfortunately this is seen as somewhat risky, and can lead to unpredictable behaviour, mostly because cron is only used on the device for system specific actions (such as /etc/cron.daily/locate which periodically updates the phone's tracker for media files), so any custom user-specific actions are somewhat temperamental.  I therefore had to abandon cron and look for something else.
+
+\subsubsection{Alarmd}
+Alarmd is a Maemo-native system daemon that {\it manages} queued alarm events which "executes actions defined in events either automatically or after user input via system ui dialog service"\footnote{http://maemo.org/packages/view/alarmd/}. At first glance it may seem like a front-end for cron, but by checking the dependencies it is seen that it talks directly to dbus. DBus is a low-level inter-system messaging/communication system for making system calls between applications, that it has been so well-engrained in Linux operating systems that it has only a single dependency.
+
+Alarmd is commonly used by the system to manage making multiple wake up alarms, but it is not restricted to that function and technically can be used to execute any alarm at any given time. It has a much easier API then cron, and does a lot of useful scheduling background tasks by itself such as removing a job from the list once complete. 
+
+In alarmd, jobs are contained between three objects: Cookies, Events, and Actions.
+\begin{description}
+  \item[Cookies] ID for the job. Can be cast as a long, and cast back into a cookie\_t object
+  \item[Actions] This describes what the alarm will do when it is called, and how it is called. It has two triggers (event listeners): Type triggers and When Triggers.
+\begin{enumerate}
+\item Type triggers determine what functionality the alarm has and common types are ALARM\_ACTION\_WHEN\_TYPE\_SNOOZE (snooze button that offputs the alarm for 10 more minutes) but for executing commands, the trigger I was using was ALARM\_ACTION\_TYPE\_EXEC. 
+\item When triggers determine the context in which the alarm will be triggered. Common types are ALARM\_ACTION\_WHEN\_RESPONDED but I was using ALARM\_ACTION\_WHEN\_TRIGGERED.
+\end{enumerate}
+Triggers have hex values, and an action is usually performed as a bitwise OR pair of Type and When triggers:\\
+'act-\(\rangle\)flags \textbar= (ALARM\_ACTION\_WHEN\_TRIGGERED \textbar ALARM\_ACTION\_TYPE\_EXEC)';\\
+which performs bitwise OR upon these two triggers and sets the flag to "'true'" when one of these is satisfied.
+ \item[Events] These are containers for Actions, and are what Alarmd holds. To add an alarm to Alarmd, you add an 'Event'. Events also hold the time\_t for the alarm, and has support for  seconds, something that cron does not have.
+\end{description}
+
+To use Alarmd, one needs to use libalarmd, which is native to the phone and so the rootstrap device already had it installed. The class I created borrowed the template for a few of it's functions from the examples at http://wiki.maemo.org/Documentation/Maemo\_5\_Developer\_Guide/Using\_Generic\_Platform\_Components/Alarm\_Framework. 
+Alarmd jobs have APPID's, which uniquely match a job to an application making it far easier to retrieve and edit jobs without affecting other jobs or having to filter through them.
+
 \subsection{qDebug vs std::cout}
+QDebug is a 
+
+
 \subsubsection{Message Handlers}
+Faffed around with message handlers for a log window, but then just used cout...
+
 \section{Optimisations/Error Proofing}
 Commandline not called until arguments!=0, then it is destroyed intelligently.
+
+Even with the decent examples at the Maemo wiki, the application was error prone: sometimes jobs would be added correctly and sometimes not, sometimes the jobs would execute correctly and sometimes not. 
+
+This was actually one of the most longest bugs to fix due to the temperamental nature of the errors. I eventually did find a fix by searching through the source code {\it Alarmed\footnote{http://maemo.org/packages/view/alarmed/}}, a python GUI for adding alarmed events to the scheduler using python bindings for libalarmd. The syntax was much the same and very soon I realised that the error turned out to be a problem with alarmd running commands from busybox, but should instead be running them from the Ash shell by prepending '/usr/bin/ash' to the executed strings. The app added and executed events flawlessly after that stage.
+
+\subsection{Kill Switch}
+
+
+Another problem that occured early on was accidentally setting the interval to every second. I did this to my mistake and was greeted by a "hello" prompt every second for at least 10 minutes while I simultaneously killed each process ID matching the alarm, and deleted each alarm individually from the app. That was a quick lesson I learned: Always have a kill switch.
+
+First I created a button that deleted {\it all} alarmd jobs for the application, and then I created a function that killed all process ID's matching a timelapse operation from the shell. The call I made was:\\
+\vspace{-20pt}
+\begin{lstlisting}[title=Kill Function]
+void killAllOccurencesOfApp(){
+    QStringList pids = terminalAction("ps aux | grep teenage\\-dipl | awk '{print $1}'", true).split('\n');
+    QString kill = "echo 'kill ";
+    for (char i=0; i< pids.length(); i++)
+    {
+        kill.append(pids.at(i)+" ");
+    }
+    kill.append("' | root");
+    std::cout << "Command: " << kill.toUtf8().data() << std::endl;
+
+    terminalAction(kill);
+\end{lstlisting}
+The function prints a list of all active processes and greps the lines where 'teenage-diplomat' match, then pipes the output into awk which grabs the first column (containing the PID's) and splits them into an array. Then a kill command is issued by appending the contents of the array into a string and run as root.
+
+The kill switch is a hidden function; it is not to be used lightly and so there is not one button that calls it. Instead it is activated by a sequence of button pressed in succession each other. This is to enable that it is not accidentally pressed by the user, but is only used in emergencies.
+
+Setting the interval to less than 30 is not permitted either, but this is discussed later in GUI section on page~\pageref{gui}
+
+
+
 
 \end{document}
