--- a/write_up.tex
+++ b/write_up.tex
@@ -103,6 +103,7 @@
 \import{parts/}{background.tex}
 \import{parts/}{motiondetect.tex}
 \import{parts/}{timelapse.tex}
+\import{parts/}{ipstreamer.tex}
 
 \part{IP Streamer}
 \section{PhoneStreamer}{existing app}
